# ord-reqwest

./: Cargo.toml  README
src/: lib.rs  main.rs  ord_client.rs
src/data/: rune_entry.rs  transaction.rs
src/decoder/: mod.rs  rune_decode.rs
src/models/: address.rs  mod.rs  ordinals.rs  runes.rs
src/runes/: mod.rs  rune_decode.rs
src/runes/data/: mod.rs  rune_entry.rs  transaction.rs
