[package]
name = "ord-reqwest"
authors = ["twosatsmaxi"]
version = "0.2.0"
edition = "2021"
description = "A lightweight HTTP client for ordinals server and runes utility"
license = "MIT"
repository = "https://github.com/twosatsmaxi/ord-reqwest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
ordinals = "0.0.8"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.116"
bitcoin = "0.30.2"
hex = "0.4.3"